# Ros_noetic

./: .gitignore  ar_track_alvar  aruco_ros  mrob_highlevel_controller  robotics_course  turtlebot3_simulations
devel/: .catkin  _setup_util.py  local_setup.sh  setup.sh
devel/include/aruco_ros/: ArucoThresholdConfig.h
devel/lib/ar_track_alvar/: createMarker  findMarkerBundles  findMarkerBundlesNoKinect  individualMarkers  individualMarkersNoKinect  trainMarkerBundle
devel/lib/aruco_ros/: double  marker_publisher  single
devel/lib/mrob_highlevel_controller/: controller  imu_based_command  vel_command
devel/lib/pkgconfig/: ar_track_alvar.pc  ar_track_alvar_msgs.pc  aruco.pc  aruco_msgs.pc  aruco_ros.pc  gazebo_ros_link_attacher.pc  mrob_control.pc  mrob_description.pc  mrob_gazebo.pc  mrob_highlevel_controller.pc  turtlebot3_fake.pc  turtlebot3_gazebo.pc  two_robot_control.pc
devel/lib/turtlebot3_fake/: turtlebot3_fake_node
devel/lib/turtlebot3_gazebo/: turtlebot3_drive
devel/lib/two_robot_control/: aruco_robot_attach.py  follow
devel/share/ar_track_alvar/cmake/: ar_track_alvarConfig.cmake
devel/share/ar_track_alvar_msgs/cmake/: ar_track_alvar_msgs-msg-paths.cmake  ar_track_alvar_msgsConfig.cmake
devel/share/aruco/cmake/: arucoConfig.cmake
devel/share/aruco_msgs/cmake/: aruco_msgs-msg-paths.cmake  aruco_msgsConfig.cmake
devel/share/aruco_ros/cmake/: aruco_rosConfig.cmake
devel/share/gazebo_ros_link_attacher/cmake/: gazebo_ros_link_attacher-msg-extras.cmake  gazebo_ros_link_attacherConfig.cmake
devel/share/mrob_control/cmake/: mrob_controlConfig.cmake
src/: ar_track_alvar  aruco_ros  gazebo_models  gazebo_ros_link_attacher  mrob_highlevel_controller  robotics_course  turtlebot3_simulations
src/marker0/: model.config  model.sdf
src/marker0/materials/textures/: Marker0.png.bk2  (+1 more)
src/mrob_highlevel_controller/: CMakeLists.txt
src/mrob_highlevel_controller/include/mrob_highlevel_controller/: HighlevelController.hpp  ImuClient.hpp  SetBoolClient.hpp
src/mrob_highlevel_controller/launch/: my_launch.launch  my_launch_old.launch  my_new_launch.launch
src/mrob_highlevel_controller/multiplots/: rosbag_multiplot.xml  turtlebot_multiplot.xml
src/mrob_highlevel_controller/params/: parameters.yaml
src/mrob_highlevel_controller/rviz/: my_rviz_file.rviz
src/mrob_highlevel_controller/src/: HighlevelController.cpp  ImuClient.cpp  Service.cpp  SetBoolClient.cpp  imuNode.cpp  node.cpp
src/mrob_highlevel_controller/worlds/: singlePillar.world
src/robotics_course/mrob_control/: CMakeLists.txt
src/robotics_course/mrob_description/: CMakeLists.txt  package.xml
src/robotics_course/mrob_description/launch/: debug.launch  load.launch
src/robotics_course/mrob_description/urdf/: turtlebot3_burger.gazebo.xacro  turtlebot3_burger.urdf.xacro
src/robotics_course/mrob_gazebo/: CMakeLists.txt
src/robotics_course/mrob_gazebo/launch/: mrob_gazebo.launch
src/robotics_course/mrob_gazebo/worlds/: empty.world  singlePillar.world  turtlebot3_autorace.world
src/robotics_course/robotics_course/: CHANGELOG.rst  CMakeLists.txt
src/two_robot_control/: CMakeLists.txt
src/two_robot_control/include/: leader.cpp
src/two_robot_control/launch/: both_robots.launch  my_launch.launch
src/two_robot_control/marker0/: model.sdf
src/two_robot_control/parameters/: params.yaml
src/two_robot_control/rviz/: robot.rviz
src/two_robot_control/src/: aruco_follow.cpp  aruco_follow_node.cpp
(+15 files in other folders)
